# mvg-tui

./: Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs  networking.rs  ui.rs
src/api/: departures.rs  mod.rs  notifications.rs  routes.rs  station.rs
src/ui_elements/: help_message.rs  inputs.rs  mod.rs  popups.rs  routes_details.rs
