[package]
name = "mvg-cli-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.149", features = ["derive"]}
serde_with = { version = "2.1.0", features = ["chrono_0_4"] }
tokio = { version = "1.23.0", features = ["full"] }
