[package]
name = "mvg-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
crossterm = "0.25.0"
itertools = "0.10.5"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.149", features = ["derive"]}
serde_with = { version = "2.1.0", features = ["chrono_0_4"] }
tokio = { version = "1.27.0", features = ["full"] }
tui = "0.19.0"
unicode-width = "0.1.10"
